--- a/plugins/golangci-lint.toml
+++ b/plugins/golangci-lint.toml
@@ -20,6 +20,7 @@ download-url = "https://github.com/golangci/golangci-lint/releases/download/v{ve
 [install.arch]
 x86 = "386"
 x86_64 = "amd64"
+aarch64 = "arm64"
 
 [install.primary]
 exe-path = "golangci-lint-1.59.1-darwin-arm64/golangci-lint"
