--- a/plugins/golangci-lint.toml
+++ b/plugins/golangci-lint.toml
@@ -10,9 +10,11 @@ git-url = "https://github.com/golangci/golangci-lint"
 
 [platform.linux]
 download-file = "golangci-lint-{version}-linux-{arch}.tar.gz"
+exe-path = "linux"
 
 [platform.macos]
 download-file = "golangci-lint-1.59.1-darwin-arm64.tar.gz"
+exe-path = "golangci-lint-1.59.1-darwin-arm64/golangci-lint"
 
 [install]
 download-url = "https://github.com/golangci/golangci-lint/releases/download/v{version}/{download_file}"
